Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $APP_NAME
  template:
    metadata:
      name: $APP_NAME
      labels:
        app: $APP_NAME
        version: $TAG_NAME
    spec:
      imagePullSecrets:
        - name: nexus-secret
      containers:
        - name: $APP_NAME
          image: $IMAGE_REGISTRY/$IMAGE_PREFIX/$APP_NAME:$TAG_NAME
          imagePullPolicy: Always
          ports:
            - name: http
              protocol: TCP
              containerPort: 8080
            - name: websocket
              protocol: TCP
              containerPort: 8081
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 3
          resources:
            limits:
              cpu: $LIMIT_CPU
              memory: $LIMIT_MEMORY
            requests:
              cpu: $REQUEST_CPU
              memory: $REQUEST_MEMORY
          volumeMounts:
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Hong_Kong
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30


---
apiVersion: v1
kind: Service
metadata:
  name: $APP_NAME
  namespace: $NAMESPACE
  labels:
    app: $APP_NAME
spec:
  sessionAffinity: None
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: websocket
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: $APP_NAME
